@@ -548,14 +548,6 @@
 				<option value="1">JSHOW</option>
 			</field>
 
-			<field name="feed_summary" type="list"
-				description="JGLOBAL_FEED_SUMMARY_DESC"
-				label="JGLOBAL_FEED_SUMMARY_LABEL"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JGLOBAL_INTRO_TEXT</option>
-				<option value="1">JGLOBAL_FULL_TEXT</option>
-			</field>
 		</fieldset>
 </fields>
 </metadata>
