@@ -52,9 +52,7 @@ class ContactViewCategory extends JView
 			// url link to article
 			$link = JRoute::_(ContactHelperRoute::getContactRoute($row->slug, $row->catid));
 
-			// strip html from feed item description text
-			// TODO: Only pull fulltext if necessary (actually, just get the necessary fields).
-			$description	= ($params->get('feed_summary', 0) ? $row->introtext/*.$row->fulltext*/ : $row->introtext);
+			$description	= $row->introtext;
 			$author			= $row->created_by_alias ? $row->created_by_alias : $row->author;
 			@$date			= ($row->created ? date('r', strtotime($row->created)) : '');
 
